feat: set headers from feed